--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="HNBGU EDRP"
+      content="HNBGU IQAC"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -44,7 +44,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Welcome To HNBGU-EDRP</title>
+    <title>Welcome To HNBGU-IQAC</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
