Fixed Faculty Profile Bug

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" /> -->
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" /> -->
     <style type="text/css">
       .preLoad {
         display: flex;
@@ -50,7 +50,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
       <div class='preLoad'>
-        <div class="preLoadImg"><img src='logo.png' width="70" height="70" /> </div>
+        <div class="preLoadImg"><img src='pre_loader.png' width="70" height="70" /> </div>
      <div class="preLoadText"> जीवा ज्योतिरशीमहि </div>
     </div>
     <!--
